Changed content of registration emails

--- a/app/views/user_mailer/new_registration.text.erb
+++ b/app/views/user_mailer/new_registration.text.erb
@@ -1,29 +1,38 @@
 Dear <%=@user.first_name%>,
 
+<%if @user.validate_by == 'credit_card'%>
 Thank you for your interest in <%=Settings.site_name%>! Your support means a lot to us and we are very grateful for it! With your help, we hope to make communities and neighbourhoods all over the country stronger and more neighbourly.
-<%unless @user.group_user?%>
 
-You've completed the first stage of registration. We now need to validate your address - after which you will be able to use the full facilities of the site to ask for and offer help to those who live nearby.
+You've now fully completed registration and activation and you are able to use the full facilities of the site to ask for and offer help to those who live nearby.
+<%elsif !@user.group_user?%>
+Thank you for completing your registration details!
+One final step. We now need to validate your address - after which you will be able to use the full facilities of the site to ask for and offer help to those who live nearby.
 
 <%if @user.validate_by == 'post'%>
-You have requested your address validation by post. A letter will soon be sent to your address with an Activation Code in it. Please email that Activation Code to <%=Settings.site_email%> or ring Rose on <%=Settings.rose_phone%> and we will fully activate your account on <%=Settings.site_name%> so that you have access to all the features.
+You have requested your address validation by post. A letter will be sent to your address with an Activation Code in it. Please email that Activation Code to <%=Settings.site_email%> or ring Jude on <%=Settings.company_phone%> and we will fully activate your account on <%=Settings.site_name%> so that you have access to all the features.
 <%else%>
-You have requested your address validation by organisation. We will contact the organisation you selected to see if they can validate your address. If not, a letter will be sent to your address with an Activation Code in it. Please email that Activation Code to <%=Settings.site_email%> or ring Rose on <%=Settings.rose_phone%> and we will fully activate your account on <%=Settings.site_name%> so that you have access to all the features.
+You have requested your address validation by organisation. We will contact the organisation you selected to see if they can validate your address. If not, a letter will be sent to your address with an Activation Code in it. Please email that Activation Code to <%=Settings.site_email%> or ring Jude on <%=Settings.company_phone%> and we will fully activate your account on <%=Settings.site_name%> so that you have access to all the features.
 <%end%>
 
-PLEASE NOTE: None of your details will be displayed on the site until you ask for or offer help to someone in need. If you ask for help, only those registered neighbours within the “broadcast range” you have specified will see your request. If you offer help, your offer will be sent privately to the person you are offering the help to.
+PLEASE NOTE: If you ask for or offer help, only those registered neighbours within “the“ "broadcast range" you have specified will see your offer or request. If you offer help to an individual, your offer will be sent privately to the person you are offering the help to.
 <%end%>
+<%if @user.validate_by == 'credit_card'%>
 
-<%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough of your neighbours online to help you. Any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated! You can find us on Facebook <%=Settings.facebook_url%> and Twitter <%=Settings.twitter_url%>
+<%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough neighbours online to help each other. Any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated!
+
+<%if get_involved_page = Page.find_by_slug(:get_involved)%>
+<%=Settings.site_url + page_path(get_involved_page)%>
+<%end%>
+<%end%>
 
 Please feel free to contact us for any information and we thank you for any comments you might give on our developing website <%="#{Settings.site_url}/feedback"%>
 
 Thanks again you for your interest; we will be back in touch soon!
 
-John, David, Rose and Ange
+John, David, Justine and Jude
 The <%=Settings.site_name%> Team
 
-<%=Settings.rose_phone%>
-<%=Settings.rose_email%>
+<%=Settings.company_phone%>
+<%=Settings.site_email%>
 <%=Settings.company_address%>
 <%=Settings.site_url%>
