--- a/app/views/wireframes/home_nl.html.haml
+++ b/app/views/wireframes/home_nl.html.haml
@@ -153,7 +153,7 @@
                 So if you agree with this long term ambition, please sign up and encourage others to do the same....and remember there's no long term commitment ; it's not neighbours MUST help or neighbours OUGHT TO help - it's neighbours CAN help.....and only if and when they want to. We just happen to believe they will.....
                 Thank you !
               %p
-                John, David, Rose and Ange
+                John, David, Justine and Jude
                 %br
                 The Neighbours Can Help Team
       #big-cta
