--- a/app/views/user_mailer/pre_register_thank_you.text.erb
+++ b/app/views/user_mailer/pre_register_thank_you.text.erb
@@ -2,18 +2,22 @@ Dear <%=@pre_register_user.first_name%>,
 
 Thank you for registering your interest in <%=Settings.site_name%>! Your support means a lot to us and we are very grateful for it! With your help, we hope to make communities and neighbourhoods all over the country stronger and more neighbourly.
 
-<%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough of your neighbours online to help you. So any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated! You can find us on Facebook <%=Settings.facebook_url%> and Twitter <%=Settings.twitter_url%>
+<%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough neighbours online to help each other. Any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated!
 
-When there are enough neighbours in <%=@pre_register_user.city%> to make helping and asking for help possible, we will switch your street and surrounding area live and let you and all your neighbours know about it.
+<%if get_involved_page = Page.find_by_slug(:get_involved)%>
+<%=Settings.site_url + page_path(get_involved_page)%>
+<%end%>
 
-Please feel free to contact us for any information and we thank you for any comments you might give on our developing website <%=feedback_url%>
+When there are enough neighbours in your postcode to make helping and asking for help possible, we will switch your street and surrounding area live and let you and all your neighbours know about it.
+
+Please feel free to contact us for any information and we thank you for any comments you might give on our developing website <%="#{Settings.site_url}/feedback"%>
 
 Thanks again you for your interest; we hope to be back in touch soon!
 
-John, David, Rose and Ange
+John, David, Justine and Jude
 The <%=Settings.site_name%> Team
 
-<%=Settings.rose_phone%>
-<%=Settings.rose_email%>
+<%=Settings.company_phone%>
+<%=Settings.site_email%>
 <%=Settings.company_address%>
 <%=Settings.site_url%>
