--- a/app/views/needs/index.js.erb
+++ b/app/views/needs/index.js.erb
@@ -1,9 +1,2 @@
-var needsHtml = '';
-<%if @needs.empty?%>
-  needsHtml = '<li><p class="no-needs-offers">Looks like no-one is requesting help in this category at the moment but describe how you can help, as someone might need your help in the future.</p></li>';
-<%else%>
-  <%@needs.each do |need|%>
-    needsHtml = needsHtml + '<%=escape_javascript(render("needs/list_item", :need => need))%>';
-  <%end%>
-<%end%>
-$('#suggested-needs').html(needsHtml);
+$('#suggested-needs').html('<%=escape_javascript(render('list', :needs => @needs))%>');
+$('#suggested-needs').removeClass('loading')
