--- a/app/views/general_offers/_list.html.haml
+++ b/app/views/general_offers/_list.html.haml
@@ -23,4 +23,4 @@
           =link_to("Accept help from #{general_offer.user}", general_offer, :class=>"btn btn-primary small-help-btn")
 .clearfix
 -if general_offers.respond_to?(:total_pages)
-  =will_paginate(general_offers, :remote => true)
+  =will_paginate(general_offers, :remote => true, :params => {:controller => 'general_offers', :action => 'index'})
