Show 'Complete registration' link in flash

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,6 +121,12 @@ body, p {
 .mb-05 {
   margin-bottom: 5px;
 }
+.no-color {
+  color: inherit;
+}
+.underline {
+  text-decoration: underline;
+}
 
 /*========== Forms ==========*/
 select[multiple='multiple']{
