Add public/private headers on users#show

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -127,6 +127,9 @@ body, p {
 .underline {
   text-decoration: underline;
 }
+.block {
+  display: block;
+}
 
 /*========== Forms ==========*/
 select[multiple='multiple']{
