--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,9 +1,9 @@
 %footer.footer
   .container
     .row
-      .span4
-        %p.copyright
-          &copy; Neighbours Can Help Ltd 
+      .span5
+        %p &copy; Neighbours Can Help Ltd
+        %p Provincial House, Solly Street, Sheffield S1 4BA
         %ul.unstyled.footer-links
           %li
             =link_to_slug(:help, :class=>"") do
@@ -11,7 +11,7 @@
               Help
           =li_with_active(@page && (@page.slug == "safety_tips" || @page.descendant_of_slug("safety_tips")), link_to_slug(:safety_tips, :class=>""))
           =li_with_active(current_page?(feedback_path), link_to("Contact us", feedback_path, :class => ""))
-      .span8      
+      .span7
         =link_to "Nominet trust", "http://www.nominettrust.org.uk/", :Target=>"_blank", :class=>"nominet-logo footer-logo"
         =link_to "Yoomee", "http://www.yoomee.com/", :Target=>"_blank", :class=>"yoomee-logo footer-logo"
         %ul.unstyled.find-us-on
