--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -964,9 +964,9 @@ html, body {
 	display: block;
 	text-indent: -9000em;
 	background: url(/assets/nominet_logo.png) no-repeat top right;
-	margin: 5px 0 0 20px;
+/* 	margin: 5px 0 0 20px; */
 	width: 170px;
-	height: 70px;
+	height: 52px;
 }
 .footer-links {
   float: left;
@@ -979,56 +979,66 @@ html, body {
 }
 a.yoomee-logo {
 	background: url(/assets/yoomee_logo.png) no-repeat top right;
+  width: 123px;
+  height: 48px;
 }
 
 .find-us-on {
-	float: left;
+	float: right;
 	clear: both;
 	font-weight: bold;
-	margin: 10px 0;
-
-  
+	margin: 0px 0px 45px 0px;
+}
+.find-us-on li {
+  display: inline-block;
 }
 .find-us-on > li {  
   margin: 0 0 0 10px;
 }
-
 .link-find-us {
 	color: #fff;
   display:block;
   padding: 10px 15px 10px 40px;
   line-height: 1;
   background:#7086bf  url(/assets/find-us-facebook.png ) no-repeat 10px center;
-  
-  
--moz-border-radius:20px;
--webkit-border-radius:20px;
-border-radius:20px;
-  
+  -moz-border-radius:20px;
+  -webkit-border-radius:20px;
+  border-radius:20px;
 }
 .link-find-us-blogger {
   background:#F1A83B url(/assets/find-us-blogger.png ) no-repeat 10px center;
 }
-
 .link-find-us-twitter{
   background:#00ACED url(/assets/find-us-twitter.png ) no-repeat 10px center;
 }
 .find-title {
   padding: 10px;
-  
+  display: list-item !important;
 }
 .link-find-us:hover {
   text-decoration: none;
-  color: #fff;
-  
+  color: #fff; 
   opacity: 0.9;
 }
-
+/*========== Flickr Feed ==========*/
+.flickr_badge_image {
+  margin: 0px;
+  display: inline;
+}
+.flickr_badge_image img {
+  border: 0px solid #666666 !important; 
+  padding: 1px; 
+  margin: 2px;
+}
+#flickr_badge_wrapper {
+  width: 250px;
+  text-align: left; 
+  margin: 0 auto;
+}
 
 .no-needs-offers {
 	padding-bottom: 60px;
 	background: url(/assets/no-needs-offers-arrow.png ) no-repeat bottom right;
-  
 }
 
 
@@ -1064,20 +1074,18 @@ border-radius:20px;
 
 .request-message-text {
 	color: #888;
-
 }
 /*========== request page ==========*/
 #request-activity {
 	padding-top: 40px;
-
 	background: #f6f6f6; /* Old browsers */
-background: -moz-linear-gradient(top,  #f6f6f6 1%, #ffffff 34%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#f6f6f6), color-stop(34%,#ffffff)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* IE10+ */
-background: linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top,  #f6f6f6 1%, #ffffff 34%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#f6f6f6), color-stop(34%,#ffffff)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* IE10+ */
+  background: linear-gradient(top,  #f6f6f6 1%,#ffffff 34%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
 .need-posts li {
   float: left;
@@ -1158,7 +1166,6 @@ body.controller_users.action_show .user-thumbnail-large .validated-icon {
 }
 .location-smallprint {
   color: #999;
-
   font-size: 14px;
   line-height: 1;
 }
@@ -1179,8 +1186,6 @@ body.controller_users.action_show .user-thumbnail-large .validated-icon {
 }
 .table-users tr {
   cursor:pointer;
-}
-.table-users td a:hover {
 }
 
 
@@ -1213,11 +1218,9 @@ body.controller_users.action_show .user-thumbnail-large .validated-icon {
   right: 19px;
   top: 0;
 }
-
 .post_tags {
   display:inline-block;
 }
-
 .controller_neighbourhoods .popover.bottom {
   margin-top: 10px;
 }
@@ -1396,7 +1399,6 @@ body.controller_home.logged_out .header-intro {
  {
   color:#98cd41;
   line-height: 1;
-
 }
 .intro-nav-link-login {
 	margin:  0 10px 0 33px;
@@ -1432,12 +1434,6 @@ body.controller_home.logged_out .header-intro {
 }
 .header-intro-fixed .help-link {
 	bottom: -28px;
-}
-a.intro-nav-link-about {
-
-}
-a.intro-nav-link-how {
-
 }
 a.intro-nav-link-security {
 	width: 65px;
@@ -1489,13 +1485,11 @@ a.intro-nav-link-security {
   float: right;
   display: block;
   background: #98cd41;
-
   color: #fff;
   padding: 10px 15px;
   border-radius:3px;
   -webkit-border-radius:3px;
   font-weight: bold;
-  
   margin: 30px 0 0 20px;
 }
 .header-intro .cta-intro {
@@ -1507,8 +1501,8 @@ a.intro-nav-link-security {
   color: #fff;
 }
 a.cta-small {
- float: left; 
- margin-left: 0;
+  float: left; 
+  margin-left: 0;
 }
 #cta-1 {
   margin-top: 30px;
@@ -1516,28 +1510,21 @@ a.cta-small {
 #cta-2 {
   margin: 10px 0px;
 }
-#cta-3 {
-}
 .intro-text {
   background: #fff;
   padding: 0px 0 30px;
   float: left;
   width: 100%;
   color: #666;
-  
 }
 .intro-text h2 {
   color: #000;
-}
-.intro-text .span8 {
-
 }
 .intro-text li {
   margin-left: 50px;
   width: 460px;
   margin-bottom: 10px;
 }
-
 .comic-strip {
   float: left;
   width: 100%;
@@ -1557,7 +1544,6 @@ a.cta-small {
 .comic-text p {
 	font-size: 22px;
 	line-height: 1.3;
-
 }
 #comic-1 {
   background: #dcd7d3 url(/assets/comic-1.jpg) no-repeat bottom center;
@@ -1582,8 +1568,6 @@ a.cta-small {
 } 
 #comic-4 {
   background: #fff url(/assets/comic-4.jpg) no-repeat bottom center;
-  
-  
 } 
 #comic-5 {
   background: #a3cd67 url(/assets/comic-5.jpg) no-repeat bottom center;
@@ -1595,7 +1579,6 @@ a.cta-small {
   background: #958b81 url(/assets/comic-6.jpg) no-repeat bottom center;
   color: #fff;
 } 
-
 .intro-strip {
   float: left;
   width: 100%;
@@ -1614,16 +1597,12 @@ a.cta-small {
   height: 20px;
   margin-top: 20px;
 }
-
-
 #security {
   padding-bottom: 20px;
   background: url(/assets/security.jpg) no-repeat center 100px;
   position: relative;
   z-index: 6;
 }
-
-
 #big-cta h2 {
   text-align: center;
 }
@@ -1641,9 +1620,6 @@ a.cta-small {
   float: left;
   width: 100%;
 }
-
-
-
 .to-top-link {
   display: block;
   float: left;
@@ -1654,7 +1630,6 @@ a.cta-small {
 }
 .popup-intro {
 	margin:0 0 30px 20px;  
-
 }
 .bottom-paragraph {
   margin-top: 30px;
@@ -1699,8 +1674,6 @@ a.cta-small {
 .your-location-title {
   font-size: 36px;
 }
-
-
 .your-location-title i {
   color: #b35860;
 }
@@ -1724,12 +1697,9 @@ a.cta-small {
 .email-share-btn, .email-share-btn:hover {
   background: rgb(69,128,62);
 }
-
- .elsewhere-list li {
+.elsewhere-list li {
 	margin: 0 0 4px
-  
 }
-
 a.need-help-button {
   float: left;
   display: block;
@@ -1737,10 +1707,8 @@ a.need-help-button {
   color: #fff;
   padding: 10px;
   margin: 0 5px 5px;
-  
   -webkit-border-radius:5px;
   border-radius:5px;
-  
 }
 a.need-help-button:hover {
   background: #609a5f;
@@ -1752,7 +1720,6 @@ a.need-help-button:hover {
   box-shadow:none;
   padding-top: 40px;
 }
-
 .joined-date {
 	font-size: 11px;
 	text-align: center;
@@ -1764,18 +1731,14 @@ a.need-help-button:hover {
 .tag-selectors {
 	border-radius:6px;
 	-webkit-border-radius:6px;
-	
 	background: #f5f5f5;
 	margin-bottom:30px;
-	
 	border: 1px solid #ccc;
 	box-shadow:1px 1px 4px rgba(0,0,0,0.1)
 } 
-
 .tag-selector {
   padding: 20px;
   position: relative;
-  
 }
 .tag-selector-arrow {
   display: block;
@@ -1786,13 +1749,9 @@ a.need-help-button:hover {
   top: -14px;
   left: 46%;
 }
-.tag-selector-row-1 {
-
-}
 .tag-selector-row-2 {
   background: #d5d5d5;
 }
-
 .help-tags li {
   float: left;
   margin: 0 10px 10px 0px;
@@ -1801,7 +1760,6 @@ a.need-help-button:hover {
 	font-size: 14px;
   display: block;
   padding: 4px 10px;
-  
 }
 .help-tag-selected {
   background: #619a5f;
@@ -1811,12 +1769,10 @@ a.need-help-button:hover {
 	width:400px;
 	min-height: 100px;
 	margin-bottom: 20px;
-  
 }
 .need-offer-form .btn-primary {
   background: #619a5f;
 }
-
 a.small-help-btn {
   float: left;
   clear: both;
@@ -1860,21 +1816,16 @@ a.small-help-btn {
 	float: left;
 	width: 100%;
 	margin: 0px 0 0;
-  
 }
 
 img.groups-logo-header {
 	float: left;
 	width: 50px;
 	margin: 0 20px 0 0;
-  
 }
-
 .groups-title {
 	line-height: 40px;
-  
 }
-
 .groups-title small {
   margin-left: 10px;
   text-decoration: underline;
@@ -1882,7 +1833,6 @@ img.groups-logo-header {
 .group-nav-tabs a {
   font-weight: bold;
 }
-
 .group-members-list li.list {
   width: 33.3%;
   float: left;
@@ -1890,28 +1840,21 @@ img.groups-logo-header {
   border: none;
   padding: 0;
 }
-
 .group-members-list .list-text{
   padding-left: 90px;
 }
-
 .group-members-list .label, h3{
   display:inline;
 }
-
 .group-members-list .label{
   margin-left:2px;
 }
-
 .group-members-list p.user-city{
   margin-bottom:0;
 }
-
 .group-members-list a.send-message{
   font-size:0.8em;
 }
-
-
 .private-messages-holding {
   background: url(/assets/group-show-messages.png ) no-repeat center;
   height: 300px;
@@ -1923,9 +1866,7 @@ img.groups-logo-header {
 	clear: both;
 	margin: 0 0 5px;
 	background: #89d6dd;
-  
 }
-
 .group-tile {
   display: block;
   background: #f5f5f5;
@@ -1956,7 +1897,6 @@ img.groups-logo-header {
   border: 2px dashed #8bd7dd;
 }
 .group-tile-new h4 {
-
   text-align: center;
 }
 .group-tile-new i {
@@ -1972,7 +1912,6 @@ img.groups-logo-header {
   margin-left:0;
   margin-right:20px;
   /*margin-top: 2px;*/
-
 }
 
 /*=============  Photo modal ===================*/
