--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -19,7 +19,7 @@
   =render "neighbourhoods/validated_map"
 -else
   .container
-  #home-intro-2
+  %div{:id=>"home-intro-#{@slideshow.present? ? 3 : 2}"}
     .container
       .row
         .span12.home-intro-inner
@@ -30,15 +30,15 @@
               -else
                 Welcome to Neighbours Can Help
             %h3.home-where.home-intro-text=neighbourhood_snippet_text(:mission_statement, "..where neighbours are helping each other")
-            =render_slideshow_by_slug(:homepage_slideshow)
+            =render_slideshow_by_slug(:homepage_slideshow) if @slideshow
           / =link_to_slug('Find out more', :about, :class=>"illustration-link")
-          =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
+          =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about #{@slideshow ? 'slideshow' : 'no-slideshow'}")
           -if current_user
-            =link_to_slug "Get involved", :get_involved, :class=>"home-cta home-cta-get-involved"
+            =link_to_slug "Get involved", :get_involved, :class=>"home-cta home-cta-get-involved #{@slideshow ? 'slideshow' : 'no-slideshow'}"
           -else
-            =link_to "Join now", "#pre-register", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
-          =link_to "Join a group", groups_path, :class=>"home-cta home-cta-groups"
-          %span.badge#badge-groups-new NEW
+            =link_to "Join now", "#pre-register", :class=>"home-cta home-cta-get-involved #{@slideshow ? 'slideshow' : 'no-slideshow'}", :"data-toggle"=>"modal"
+          =link_to "Join a group", groups_path, :class=>"home-cta home-cta-groups #{@slideshow ? 'slideshow' : 'no-slideshow'}"
+          %span.badge#badge-groups-new{:class => "#{@slideshow ? 'slideshow' : 'no-slideshow'}"} NEW
 
 .container
   =render('home/cycled_columns')
