Add stats admin area

--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -83,6 +83,13 @@
         %ul.unstyled
           %li=link_to "View all groups", list_groups_path
           %li=link_to "New group", new_group_path
+    .span4
+      .well
+        %h2
+          %i.icon-align-justify
+          Stats
+        %ul.unstyled
+          %li=link_to "View stats", stats_neighbourhoods_path
 
 -else
   .row
