--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2002,7 +2002,14 @@ body.controller_groups form .register-tab-pane {
 .nav-tabs-users li a{
   padding: 8px 10px;
 }
-
+.nav-tabs-users li.no-results a{
+  cursor:default;
+  color:#999;
+}
+.nav-tabs-users li.no-results a:hover{
+  background-color:#fff;
+  color:#999;
+}
 
 /*=============  Slideshows ===================*/
 
