--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,6 +122,10 @@ body, p {
   margin-bottom: 5px;
 }
 
+.bold{
+  font-weight: bold;
+}
+
 /*========== Forms ==========*/
 select[multiple='multiple']{
   width:620px;
