--- a/app/views/users/_table.html.haml
+++ b/app/views/users/_table.html.haml
@@ -43,3 +43,19 @@
               -else
                 =link_to "Mark sent", send_activation_code_user_path(user), :method => :put
           %td=link_to "View actions", "##{tab}-user-#{user.id}", :'data-toggle'=>"modal"
+
+          .modal.hide.fade{:id => "#{tab}-user-#{user.id}"}
+            .modal-header
+              %button.close{:type => 'button', :'data-dismiss' => 'modal'} x
+            .modal-body
+              =link_to "#{user.is_deleted? ? 'Un-delete user' : 'Delete user'}", toggle_is_deleted_user_path(user), :class => 'btn btn-danger pull-left', :method => :put, :confirm => "Are you sure?"
+              -if user.validated?
+                =link_to "Unvalidate", unvalidate_user_path(user), :class => 'btn btn-danger pull-left', :method => :put
+                -if user.is_community_champion?
+                  =link_to "Un-champion".html_safe,toggle_champion_user_path(user), :class => "btn", :method => :put
+                -else
+                  -unless user.champion_request_at.present?
+                    =link_to "Assign a champion",validate_user_path(user), :class => "btn", :remote => true, :'data-user-id' => user.id
+                  =link_to "Make champion",toggle_champion_user_path(user), :class => "btn", :method => :put
+              -else
+                =link_to "Validate", validate_user_path(user), :class => "btn btn-primary", :remote => true, :'data-user-id' => user.id
